html/menu/css/apple-IIe.css
@charset "UTF-8";
/* FORK of "Apple IIe 3D" */

/* The keyboard is done interestingly, but is not historical.  The
   monitor and drive are nice. The monitor could use a few small extra
   image elements but is great. */

/* This fork makes some lights flash, fixes some bugs, and makes the
   3D model into a toy UI. */



*,
*::before,
*::after {
  box-sizing: border-box;
}


:root {
  --object-box-shadow: 0vmin 0.1vmin 0.4vmin 0.1vmin #111,
    0.5vmin 1vmin 1.5vmin 0.1vmin #888;
  --object-box-shadow-floppy: 0vmin 0vmin 0.8vmin 0.4vmin #111,
    0 1vmin 2.5vmin 0.5vmin #888;
  --object-box-shadow-monitor: 0 1.6vmin 0.8vmin 0.2vmin #222;
}

@font-face {
  /* source http://www.kreativekorp.com/software/fonts/apple2.shtml */
  font-family: "Terminal";
  src: url("../assets/apple-IIe-80col.ttf");
}
html {
  width: 100%;
}

body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100vh;
  display: grid;
  place-items: center;
}

.bg {
  position: fixed;
  width: 100%;
  height: 100vh;
  background-repeat: no-repeat;
  background: linear-gradient(-145deg, #555, transparent 30%), linear-gradient(#bbb 30%, #aaa 60%, #bbb 65%, #fff);
}

.XXXh1-bg {
  position: absolute;
  font-family: "Cormorant Garamond", serif;
  font-wight: 600;
  font-size: 30vmin;
  left: 105vmin;
  top: 10vmin;
  padding: 0;
  margin: 0;
  white-space: nowrap;
  background: linear-gradient(#bbb, #fff);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  mix-blend-mode: multiply;
  letter-spacing: -0.5vmin;
}
.XXXh1-bg span {
  font-size: 12vmin;
  margin-left: -4vmin;
}

.🖥️ {
  position: absolute;
  width: 100vmin;
  height: 100vmin;
  perspective: 80vmin;
  perspective-origin: 70% 40%;
}
.keys-container {
  --size: 3vmin;
  --size-half: calc(var(--size) / 2);
  --height: 1.5vmin;
  --height-half: calc(var(--height) / 2);
  transform: translate3d(0, -1vmin, 0.9vmin);
  transform-style: preserve-3d;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(15, 1fr);
  grid-template-rows: repeat(5, 1fr);
  grid-gap: 0.75vmin;
  padding: 0 6vmin;
  font-family: Verdana;
  font-variant: small-caps;
  font-size: 1vmin;
}
.keys-container::before {
  display: none;
  position: absolute;
  left: 0;
  top: 0;
  background-color: #524239;
  content: "";
  width: calc(100% - 12vmin);
  height: 100%;
  margin: 0 6vmin;
  transform: translateZ(calc(-1 * var(--size-half)));
  box-shadow: 0 0 1.5vmin #524239;
}

.key {
  width: 100%;
  height: var(--size);
  position: relative;
  transform-style: preserve-3d;
  overflow: visible;
}
.key--template {
  display: none;
}
.key__side {
  position: absolute;
  width: var(--size);
  height: var(--size);
  background-color: #c2aba3;
  transform-style: preserve-3d;
  padding: 0.2em 0.4em;
  overflow: visible;
  border: 1px solid #c2aba3;
}
.key__side--top {
  transform: rotateY(0deg) translateZ(0.75vmin);
  overflow: visible;
  width: 100%;
  border: none;
}
.key__side--top::after {
  position: absolute;
  left: 0;
  top: 0;
  content: "";
  width: 100%;
  height: 100%;
  border-radius: 0.45vmin;
  box-shadow: inset 0 0 0.75vmin #687c61;
}
.key__side--right {
  --key-right-z: 1.3w;
  transform: rotateY(90deg) translateZ(var(--key-right-z));
  background: linear-gradient(75deg, #988576, #6a635c 50%);
  width: var(--height);
  border-right: 1px solid #736864;
}
.key__side--bottom {
  transform: rotateY(180deg) translateZ(var(--height-half));
  width: 100%;
  border: none;
  box-shadow: 0 0 1.5vmin 0.3vmin #6f5a4f, 0 0 0.3vmin 0.2vmin black;
}
.key__side--left {
  transform: rotateY(-90deg) translateZ(var(--height-half));
  background: linear-gradient(35deg, #6a635c, #988576 50%);
  width: var(--height);
  height: 100%;
  border-left: 1px solid #736864;
}
.key__side--back {
  transform: rotateX(90deg) translateZ(var(--height-half));
  width: 100%;
  height: var(--height);
}
.key__side--front {
  --height-half: 2.25vmin;
  transform: rotateX(-90deg) translateZ(var(--height-half));
  background: linear-gradient(#988576, #736864 50%);
  width: 100%;
  height: var(--height);
  border-top: 1px solid #e6e4d9;
  border-bottom: 1px solid #736864;
}
.key.key--⇥, .key.key--Del, .key.key--Ctrl, .key.key--⇧, .key.key--⇩ {
  grid-column-end: span 2;
  width: 100%;
}
.key.key--⇧ {
  grid-column-end: span 3;
}
.key.key--_ {
  grid-column-end: span 6;
  width: 100%;
  color: transparent;
}
.key.key--none {
  opacity: 0;
}
.key.key--↵ {
  grid-row-end: span 2;
  height: 100%;
}
.key.key--↵ .key__side--top {
  height: 100%;
}

.keyboard {
  position: absolute;
  top: 67.5vmin;
  left: 23.5vmin;
  width: 78vmin;
  height: 45vmin;
  transform-style: preserve-3d;
  transform: translateY(-50%) translateZ(0vmin) rotateX(80deg);
  border-radius: 7.5vmin;
}
.keyboard .top {
  position: absolute;
  width: calc(100% - 0.75vmin);
  height: calc(100% - 0.75vmin);
  background-color: #e7e4d9;
  border-radius: 3vmin;
  border-bottom: 0.075vmin solid #fff;
  transform: translateY(1.65vmin) translateX(0.75vmin) translateZ(0.75vmin);
  display: grid;
  grid-template-rows: 1fr 1fr;
  place-items: center;
  font-family: "Audiowide", cursive;
  font-size: 2.5vmin;
  transform-style: preserve-3d;
}
.keyboard .top .embed {
  width: 90%;
  height: 80%;
  box-shadow: inset 0 0.6vmin 1.2vmin rgba(60, 118, 83, 0.4);
  z-index: 1;
  grid-area: 2/1;
  border-radius: 1.5vmin;
}
.keyboard .top .emboss {
  width: 98%;
  height: 90%;
  z-index: 1;
  grid-area: 1/1;
  border-radius: 1.5vmin;
  border: 1px solid #ddd9c9;
  background-color: rgba(255, 255, 255, 0.5);
  transform: translateY(-1.5vmin);
  padding: 1.5vmin;
  position: relative;
  box-shadow: inset 0 0 1vmin 0.5vmin rgba(221, 217, 201, 0.6);
}
.keyboard .top .emboss::before {
  content: "";
  width: 95%;
  height: 85%;
  position: absolute;
  top: 0;
  left: 2.5%;
  background-color: #e7e4d9;
  border-radius: 1.5vmin;
  border: 1px solid #ddd9c9;
}
/* ... */

